@startuml

title __CORIDORBUILDER's Class Diagram__\n


        class gameLogic.coridorBuilder.BacktrackingCoridorBuilder {
            - visitedCells : ArrayList<Cell>
            + BacktrackingCoridorBuilder()
            + build()
            - hasNeighbour()
        }

  

        abstract class gameLogic.coridorBuilder.CoridorBuilder {
            {abstract} + build()
            + setMaze()
        }

  gameLogic.coridorBuilder.BacktrackingCoridorBuilder -up-|> gameLogic.coridorBuilder.CoridorBuilder
  gameLogic.coridorBuilder.CoridorBuilder o-- gameLogic.Maze : maze


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
